# algodes

./: .clang-format  .gitignore  LICENSE  README.md  clang-format-recursively  clangify  clangify-revert  repo-copyback
STAGING/strassen/: CMakeLists.txt  strassen.c  strassen.h
baselines/heaps/include/: binheap.h  total_orders.h
baselines/heaps/src/: binheap.c
baselines/sorting/: CMakeLists.txt  README.md
baselines/sorting/include/: bubble_sort.h  heap_sort.h  insertion_sort.h  select.h  selection_sort.h  swap.h  total_order.h  utilities.h
baselines/sorting/src/: bubble_sort.c  heap_sort.c  insertion_sort.c  swap.c  total_order.c  utilities.c
baselines/strassen/: matrix.c  test.h
code/ASTRAGAL/: CMakeLists.txt  LICENSE  main.c  matrix.h
code/binheaps/binheaps_swapless/: build.sh
code/binheaps/binheaps_swapless/src/: total_orders.c
code/binheaps/binheaps_swapping/tests/common/: heap_functions.c  heap_functions.h
code/binheaps/include/: binheap.h  total_orders.h
code/binheaps/src/: binheap.c
code/binheaps/tests/common/: array_functions.c  array_functions.h
code/binheaps_swapless/: CMakeLists.txt
code/binheaps_swapless/include/: binheap.h
code/binheaps_swapless/src/: binheap.c
code/dijkstra/: CMakeLists.txt
code/dijkstra/include/: adjlist.h  binheap.h  edsger.h  graphops.h  total_orders.h
code/dijkstra/src/: adjlist.c  binheap.c  edsger.c  graphops.c  main.c  test.c  total_orders.c
code/sorting/: CMakeLists.txt
code/sorting/include/: binheap.h  heap_sort.h  insertion_sort.h  quick_sort.h  select.h  selection_sort.h  total_order.h
code/sorting/src/: binheap.c  bubble_sort.c  heap_sort.c  insertion_sort.c  main.c  quick_sort.c  select.c  selection_sort.c  total_order.c  utilities.c
code/strassen/: DIFF.md  README.md  main.c  matrix.c  matrix.h  strassen.c  strassen.h  test.c  test.h  util.c  util.h
code/strassen/strassen_with_padding/: CMakeLists.txt  clean.sh  main.c  test.h
code/strassen/strassen_with_peeling/: main.c  test.h
code/strassen_ASTRAGAL/: matrix.c  strassen.c  strassen.h  test.c  util.c  util.h
code/strassen_old/: main.c
